// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default options deep merge three objects 1`] = `
Object {
  "array": Array [
    3,
    4,
  ],
  "number": 3,
  "object": Object {
    "a": 1,
    "b": 3,
    "c": Array [
      3,
      3,
      Array [
        3,
        3,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 3,
      "z": 3,
    },
    "e": null,
  },
  "string": "baz",
  "undefined": undefined,
}
`;

exports[`Default options deep merge two objects 1`] = `
Object {
  "array": Array [
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "a": 1,
    "b": 2,
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "string": "bar",
  "undefined": undefined,
}
`;

exports[`Options: Arrays appendArrays 1`] = `
Object {
  "array": Array [
    1,
    2,
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "a": 1,
    "b": 2,
    "c": Array [
      1,
      1,
      Array [
        1,
        1,
      ],
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "string": "bar",
  "undefined": undefined,
}
`;

exports[`Options: Arrays dedupArrays + appendArrays 1`] = `
Object {
  "array": Array [
    1,
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "a": 1,
    "b": 2,
    "c": Array [
      1,
      Array [
        1,
        1,
      ],
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "string": "bar",
  "undefined": undefined,
}
`;

exports[`Options: Arrays dedupArrays + prependArrays 1`] = `
Object {
  "array": Array [
    2,
    3,
    1,
  ],
  "number": 2,
  "object": Object {
    "a": 1,
    "b": 2,
    "c": Array [
      2,
      Array [
        2,
        2,
      ],
      1,
      Array [
        1,
        1,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "string": "bar",
  "undefined": undefined,
}
`;

exports[`Options: Arrays prependArrays 1`] = `
Object {
  "array": Array [
    2,
    3,
    1,
    2,
  ],
  "number": 2,
  "object": Object {
    "a": 1,
    "b": 2,
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
      1,
      1,
      Array [
        1,
        1,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "string": "bar",
  "undefined": undefined,
}
`;

exports[`Options: Callbacks afterEach() arguments 1`] = `
Object {
  "a": 2,
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Callbacks afterEach() return value 1`] = `
Object {
  "array": "baz",
  "number": "baz",
  "object": "baz",
  "string": "baz",
  "undefined": "baz",
}
`;

exports[`Options: Callbacks afterEach() without return value 1`] = `
Object {
  "array": Array [
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "a": 1,
    "b": 2,
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "string": "bar",
  "undefined": undefined,
}
`;

exports[`Options: Callbacks beforeEach() arguments 1`] = `
Object {
  "a": 2,
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Callbacks beforeEach() with return value 1`] = `
Object {
  "array": "baz",
  "number": "baz",
  "object": "baz",
  "string": "baz",
  "undefined": "baz",
}
`;

exports[`Options: Callbacks beforeEach() without return value 1`] = `
Object {
  "array": Array [
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "a": 1,
    "b": 2,
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "string": "bar",
  "undefined": undefined,
}
`;

exports[`Options: Callbacks filter() arguments 1`] = `
Object {
  "a": 2,
  "b": Object {
    "c": "bar",
  },
}
`;

exports[`Options: Callbacks filter() false 1`] = `
Object {
  "array": Array [
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "a": 1,
    "b": 2,
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "undefined": undefined,
}
`;

exports[`Options: Callbacks filter() true 1`] = `
Object {
  "string": "bar",
}
`;

exports[`Options: Callbacks filter() without return value 1`] = `
Object {
  "array": Array [
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "a": 1,
    "b": 2,
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "string": "bar",
  "undefined": undefined,
}
`;

exports[`Options: Keys onlyCommonKeys + onlyKeys 1`] = `
Object {
  "object": Object {
    "b": 2,
  },
}
`;

exports[`Options: Keys onlyCommonKeys + skipKeys 1`] = `
Object {
  "number": 2,
  "object": Object {
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "y": 2,
    },
  },
  "string": "bar",
}
`;

exports[`Options: Keys onlyCommonKeys 1`] = `
Object {
  "array": Array [
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "b": 2,
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "y": 2,
    },
  },
  "string": "bar",
}
`;

exports[`Options: Keys onlyKeys + skipKeys 1`] = `
Object {
  "object": Object {
    "b": 2,
  },
}
`;

exports[`Options: Keys onlyKeys 1`] = `
Object {
  "object": Object {
    "a": 1,
    "b": 2,
  },
  "string": "bar",
}
`;

exports[`Options: Keys onlyUniversalKeys + onlyKeys 1`] = `
Object {
  "object": Object {
    "b": 2,
  },
}
`;

exports[`Options: Keys onlyUniversalKeys + skipKeys 1`] = `
Object {
  "number": 2,
  "object": Object {
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "y": 2,
    },
  },
  "string": "bar",
}
`;

exports[`Options: Keys onlyUniversalKeys 1`] = `
Object {
  "array": Array [
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "b": 2,
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "y": 2,
    },
  },
  "string": "bar",
}
`;

exports[`Options: Keys skipCommonKeys + onlyKeys 1`] = `
Object {
  "undefined": undefined,
}
`;

exports[`Options: Keys skipCommonKeys + skipKeys 1`] = `
Object {
  "undefined": undefined,
}
`;

exports[`Options: Keys skipCommonKeys 1`] = `
Object {
  "undefined": undefined,
}
`;

exports[`Options: Keys skipKeys 1`] = `
Object {
  "array": Array [
    2,
    3,
  ],
  "number": 2,
  "object": Object {
    "c": Array [
      2,
      2,
      Array [
        2,
        2,
      ],
    ],
    "d": Object {
      "x": 1,
      "y": 2,
      "z": 2,
    },
    "e": null,
  },
  "string": "bar",
}
`;

exports[`Options: Keys skipUniversalKeys + onlyKeys 1`] = `
Object {
  "undefined": undefined,
}
`;

exports[`Options: Keys skipUniversalKeys + skipKeys 1`] = `
Object {
  "undefined": undefined,
}
`;

exports[`Options: Keys skipUniversalKeys 1`] = `
Object {
  "undefined": undefined,
}
`;
